  The secondary controller can be disabled by passing ata1=disabled.

The BIOS & ATA paramters can be combined.  E.g. if you wish to disable the ATA controller
for hda and hdb and instead use the BIOS driver, while leaving the drive cdc enabled in
the ATA driver you would pass:

ata0=disabled hda=bios hdb=bios

* Apr 27 2003, Henrik Isaksson *

Updated keymaps for the new keymap format.
Added dead keys to Swedish keymap.

* Apr 27 2003, Kristian Van Der Vliet *

Fix compile errors when using pthread.h

* Apr 27 2003, Kristian Van Der Vliet *

Applied a bug-fix patch to the VT82xx audio driver from Arno Klenke<arno_klenke@yahoo.de>

* Apr 27 2003, Kristian Van Der Vliet *

ISO9660 filesystem from Ville Kallioniemi <festivus@mbnet.fi> added

* Apr 01 2003, Henrik Isaksson *

Updated emu10k1 driver for Audigy support, and finally, got rid of the Bad Noise(tm)!!!

* Mar 29 2003, Kristian Van Der Vliet *

Two more patchs from Arno Klenke<arno_klenke@yahoo.de> for the ATA[PI] driver which fixes some
bugs in atapi_read(), atapi_readv() and atapi_packet_command().  It is now possible to mount, read
and unmount an ISO9660 formatted disc under Syllable.

* Mar 26 2003, Kristian Van Der Vliet *

SiS 3xx video driver and Via82xx audio drivers from Arno Klenke<arno_klenke@yahoo.de>

* Mar 26 2003, Kristian Van Der Vliet *

Changed the default DEBUG_LIMIT limit to KERN_INFO

* Mar 26 2003, Kristian Van Der Vliet *

Cleaned up the formatting of this ChangeLog

* Mar 26 2003, Kristian Van Der Vliet *

Two patches for the ATA driver from Arno Klenke <arno_klenke@yahoo.de>  One fixes a bug in select_drive()
and the other modifies atapi_packet_command() to handle drives that send their response as multiple chunks
of data.

* Mar 23 2003, Kristian Van Der Vliet *

Added an ATA/ATAPI driver, and removed the old "ide" driver under syllable/system/sys/kernel/driver/disk/

* Feb 18 2003, Kristian Van Der Vliet *
