@@ -1,3 +1,8 @@
+* May 17 2003, Henrik Isaksson *
+
+Applied more of Arno's patches (screen_mode struct in guidefines.h and
+some changes in videooverlay.cpp).
+
 * May 11 2003, Henrik Isaksson *
 
 Applied Arno's Video Overlays patches.
